force-app/zurich-base/main/default/objects/CaseTransferDestinations__mdt/CaseTransferDestinations__mdt.object-meta.xml
<CustomObject>
    <label>Case Transfer Destination</label>
    <pluralLabel>Case Transfer Destinations</pluralLabel>
</CustomObject>