force-app/zurich-base/main/default/objects/CaseTransferDestinations__mdt/fields/DestinationCallCenter__c.field-meta.xml
<CustomField>
    <fullName>DestinationCallCenter__c</fullName>
    <label>Destination Call Center</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>