force-app/zurich-base/main/default/objects/CaseTransferDestinations__mdt/fields/DestinationQueue__c.field-meta.xml
<CustomField>
    <fullName>DestinationQueue__c</fullName>
    <label>Destination Queue</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>