force-app/zurich-base/main/default/objects/CaseTransferDestinations__mdt/fields/DestinationRecordType__c.field-meta.xml
<CustomField>
    <fullName>DestinationRecordType__c</fullName>
    <label>Destination Record Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>