force-app/zurich-base/main/default/objects/CaseTransferDestinations__mdt/fields/SourceCallCenter__c.field-meta.xml
<CustomField>
    <fullName>SourceCallCenter__c</fullName>
    <label>Source Call Center</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>