force-app/zurich-base/main/default/objects/CaseTransferDestinations__mdt/fields/SourceQueue__c.field-meta.xml
<CustomField>
    <fullName>SourceQueue__c</fullName>
    <label>Source Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>